--- a/proj.css
+++ b/proj.css
@@ -19,13 +19,13 @@ nav {
     z-index: 1; 
 }
 
-.icon {
+/* .icon {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-left: 562px; 
     border-radius: 50%;
-}
+} */
 
 .logo img {
     border-radius: 60px;
